# sentiment_ia_exo

./: README.md  pyproject.toml
src/sentiment_ia_exo/: main.py
