[project]
name = "sentiment-ia-exo"
version = "0.1.0"
description = ""
authors = [
    {name = "Julesljn",email = "juleslejeunepro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "sentiment_ia_exo", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.10"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
